scss/component/_modal.scss
// .modal-open      - body class for killing the scroll
// .modal           - container to scroll within
// .modal-dialog    - positioning shell for the actual modal
// .modal-content   - actual modal w/ bg and corners and shit


// Kill the scroll on the body
.modal-open {
    overflow: hidden;
}

// Container that the modal scrolls within
.modal {
    direction: ltr #{"/*rtl:ignore*/"};
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: $zindex-modal;
    display: none;
    overflow: hidden;
    // Prevent Chrome on Windows from adding a focus outline. For details, see
    // https://github.com/twbs/bootstrap/pull/10951.
    outline: 0;
    // Don't use `-webkit-overflow-scrolling: touch;` due to a
    // iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
    // See also https://github.com/twbs/bootstrap/issues/17695
    //-webkit-overflow-scrolling: touch;

    // When fading in the modal, animate it to slide down
    &.fade .modal-dialog {
        @if $enable-transitions {
            transition: $modal-transition;
            transform: translate(0, -25%);
        }
    }
    &.in .modal-dialog { transform: translate(0, 0); }
}
.modal-open .modal {
    overflow-x: hidden;
    overflow-y: auto;
}

// Shell div to position the modal with bottom padding
.modal-dialog {
    direction: ltr;
    position: relative;
    width: auto;
    margin: $modal-dialog-margin;
    // Allow clicks to pass through for custom click handling to close modal
    pointer-events: none;
}

.modal-dialog-centered {
    display: flex;
    align-items: center;
    height: 100%;
    margin-top: 0;
    margin-bottom: 0;
}

// Actual modal
.modal-content {
    position: relative;
    width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
    // Override the `pointer-events: none;` in the .modal-dialog
    pointer-events: auto;
    background-color: $modal-content-bg;
    background-clip: padding-box;
    border: $modal-content-border-width solid $modal-content-border-color;
    @include border-radius($modal-border-radius);
    @include box-shadow($modal-content-xs-box-shadow);
    // Remove focus outline from opened modal
    outline: 0;
}

// Modal background
.modal-backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: $zindex-modal-backdrop;
    background-color: $modal-backdrop-bg;

    // Fade for backdrop
    &.fade { opacity: 0; }
    &.in { opacity: $modal-backdrop-opacity; }
}

// Modal header
// Top section of the modal w/ title and dismiss
.modal-header {
    padding: $modal-header-padding-y $modal-header-padding-x;
    border-bottom: $modal-header-border-width solid $modal-header-border-color;
    @include border-top-radius($modal-inner-border-radius);
    @include clearfix;

    // Close icon
    .close {
        padding: $modal-close-padding-y $modal-close-padding-x;
        margin: (-$modal-header-padding-y) (-$modal-header-padding-x);
    }
}

// Title text within header
.modal-title {
    margin: 0;
    line-height: $modal-title-line-height;
}

// Modal body
// Where all modal content resides (sibling of .modal-header and .modal-footer)
.modal-body {
    position: relative;
    padding: $modal-inner-padding-y $modal-inner-padding-x;
}

// Footer (for actions)
.modal-footer {
    padding: $modal-footer-padding-y $modal-footer-padding-x;
    text-align: right; // right align buttons
    border-top: $modal-footer-border-width solid $modal-footer-border-color;
    @include border-bottom-radius($modal-inner-border-radius);
    @include clearfix(); // clear it in case folks use .float-* classes on buttons
}

// Scale up the modal
@include media-breakpoint-up(#{$modal-breakpoint}) {
    // Automatically set modal's width for larger viewports
    .modal-dialog {
        max-width: $modal-md;
        margin: $modal-dialog-sm-up-margin-y auto;
    }

    .modal-dialog-centered {
        margin-top: 0;
        margin-bottom: 0;
    }

    .modal-content {
        @include box-shadow($modal-content-sm-up-box-shadow);
    }

    .modal-sm { max-width: $modal-sm; }
}

@include media-breakpoint-up(#{$modal-lg-breakpoint}) {
    .modal-lg { max-width: $modal-lg; }
}

